--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</style>
 </head>
 <body>
-    <input type="button" onclick="CreateTableFromJSON()" value="Create Table From JSON" />
+    <input type="button" onclick="CreateTableFromJSON()" value="Aimtell Table" />
     <p id="showData"></p>
 </body>
 
